syntax = "proto3";

option csharp_namespace = "ClienteUtilizador";
import "google/protobuf/timestamp.proto"; //importação para usar o timestamp

package greet;

//APLICAÇÃO CLIENTE
service ClienteUtilizadorP {
	rpc RegistarAposta (Aposta) returns (EstadoAposta);
	rpc HistoricoApostas (PedidoHistorico) returns (ResultadoHistorico);
}
message Aposta {
	int32 NumeroApostador = 1; 
	repeated int32 Numeros = 2;
	repeated int32 Estrelas = 3; 
}
message EstadoAposta {
	bool Estado = 1;
}
message PedidoHistorico {
	int32 NumeroApostador = 1;
}
message Historico{
	int32 NumeroAposta=1;
	string Numeros =2;//Numero Utilizador + Chave + Numero Sorteio
	string Estrelas =3;
	google.protobuf.Timestamp DataAposta=4;
	int32 Premio=5;
}
message ResultadoHistorico {
	bool Estado = 1;
	repeated Historico HistoricoApostas = 2; 
} 

	//APLICAÇÃO GESTOR SORTEIO
service ClienteGestorSorteioP {
	rpc GerirSorteio (Resultado) returns (EstadoResultado);
}

message Resultado {
	repeated int32 Numeros = 1;
	repeated int32 Estrelas = 2;
}
message EstadoResultado {
	bool Estado = 1;
	repeated string ApostasVencedoras = 2;
}

	//APLICAÇÃO ADMINISTRADOR
service ClienteAdministradorP{
	rpc Arquivar (ArquivoInput) returns (ArquivoResposta);
	rpc Consultar (ConsultarInput) returns (ConsultarResposta);
}


message ArquivoInput {
	repeated string HistoricoApostas = 1; //Numero Utilizador + Chave
}
message ArquivoResposta {
	string EstadoArquivo = 1;
}
message ConsultarInput {
	bool Pedido = 1;
}
message ConsultarResposta {
	bool Estado = 1;
	repeated string Utilizadores = 2;
	repeated string Apostas = 3;
}